# open-motion-studio

./: .gitignore  README.md
core/robot_model/: CMakeLists.txt
core/robot_model/build_test/: robot_model_example
core/robot_model/examples/: basic_robot.cpp
core/robot_model/include/robot_model/: geometry.hpp  inertial.hpp  joint.hpp  link.hpp  robot_model.hpp  transform.hpp
core/robot_model/src/: robot_model.cpp
